example/lib/src/arbs/errors/app_am.arb
{
  "@@locale": "am",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "ስህተት ተከስቷል",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "አስቸኳይ ስህተት ተከስቷል",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "በተሳካ ሁኔታ የተላከ ባግ ሪፖርት ነው.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}